Committing and Pushing this code before adding stylable toast dependencies and styling app... app is fully functional and tested

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
             android:exported="false" />
         <activity
             android:name=".startupActivities.LoginActivity"
+            android:parentActivityName=".startupActivities.MainActivity"
             android:exported="false" />
         <activity
             android:name=".startupActivities.MainActivity"
