--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'io.github.muddz:styleabletoast:2.4.0'
 }
